--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "vue-image-blur",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "vue": "^2.5.21"
-  },
+  "name": "@djanoskova/packagename",
+  "version": "0.2.0",
+  "private": false,
+  "main": "./src/index.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json"
+  ],
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "eslint-plugin-vue": "^5.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -32,15 +27,5 @@
     "parserOptions": {
       "parser": "babel-eslint"
     }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
